# vuln-chat

./: .env.example  FINDINGS.md  README.md  docker-compose.yaml
LightRAG/: Dockerfile
LightRAG/lightrag/: utils.py
evaluation/: eval.ipynb  eval_results_faiss.json  eval_results_lightrag.json  evaluators.py  generate_testset.ipynb  pyproject.toml  test_generators.py  testset.json
faiss/: Dockerfile  pyproject.toml  server.py
vuln_agent/: Dockerfile  pyproject.toml  server.py
vuln_loader/: .env.example  Dockerfile  models.py  nvd_cves.pkl  pyproject.toml  server.py
