[project]
name = "faiss-vector-store"
version = "0.1.0"
description = "FAISS vector store with REST API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "faiss-cpu>=1.9.0",
    "pydantic>=2.0.0",
    "langchain-cohere>=0.5.1",
]
