[project]
name = "vuln-agent"
version = "0.1.0"
description = "Chat agent for vulnerabilities"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "langsmith>=0.8.3",
    "uvicorn[standard]>=0.46.0",
]
